[package]
name = "rael_img"
version = "0.1.0"
edition = "2024"
description = "A utility crate for loading and processing images for the rael terminal rendering engine."
license = "MIT"
repository = "https://github.com/YoussefDevPro/rael_img"
keywords = ["rael", "image", "terminal", "graphics"]
categories = ["graphics", "rendering", "command-line-interface"]

[lib]
name = "rael_img"
path = "src/lib.rs"

[dependencies]
rael = "0.1.3"
image = { version = "0.25.8", features = ["webp"] }
crossterm = "0.29.0"
